@@ -162,8 +162,8 @@ public:
   _WRAP_METHOD(Glib::RefPtr<Display> get_display(), gdk_drawable_get_display, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Display> get_display() const, gdk_drawable_get_display, refreturn)
 
-  #m4 _CONVERSION(`cairo_t*',`Cairo::Context',`Cairo::Context($3)')
-  _WRAP_METHOD(Cairo::Context create_cairo_context(), gdk_cairo_create)
+  #m4 _CONVERSION(`cairo_t*',`Cairo::RefPtr<Cairo::Context>',`Cairo::RefPtr<Cairo::Context>(new Cairo::Context($3))')
+  _WRAP_METHOD(Cairo::RefPtr<Cairo::Context> create_cairo_context(), gdk_cairo_create)
 };
 
 } // namespace Gdk
