@@ -1,3 +1,11 @@
+2005-12-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/drawingarea/myarea.cc:
+	* gdk/gdkmm/general.cc:
+	* gdk/gdkmm/general.h:
+	* gdk/src/drawable.hg: Use Cairo objects via 
+	Cairo::RefPtr.
+
 2005-12-15  Murray Cumming <murrayc@murrayc.com>
 
 	* gtk/src/adjustment.ccg:
